bad/bin_op_ne_array_array.example_compiler_output
ERROR
[1mbad/bin_op_ne_array_array.lat:6:11: [1;31merror: [0;1moperator != cannot compare values of types `X[]` and `Y[]` because values are not convertible to either of the two types[m
	new X[2] != new Y[2];
	         [1;32m^[m
